# Airfoil_Project

./: CMakeLists.txt  main.cpp  main.h  plot_sim.py  simulation.cpp  simulation.h  tests.cpp
.github/workflows/: ci.yml
src/: main.cpp  simulation.cpp  simulation.h
tests/: test_simulation.cpp
